--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
-    "joi": "^13.1.0"
+    "joi": "^13.1.0",
+    "mongoose": "^5.0.2"
   },
   "repository": {
     "type": "git",
